[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.codespell]
ignore-words-list = "strat"

[tool.constcheck]
ignore_strings = [
    "store",
    "store_true",
    "utf-8",
]

[tool.constcheck.ignore_from]
"pyaud/_cache.py" = [
    "miss: %s",
]
"pyaud/_config.py" = [
    "default",
    "exclude",
    "formatter",
    "handlers",
    "level",
    "root",
    "class",
]
"pyaud/_default.py" = [
    "clean",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
    "pyaud/__main__.py",
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
description = "Framework for writing Python package audits"
documentation = "https://pyaud.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/pyaud/"
keywords = [
    "audit",
    "fix",
    "ci",
    "style",
    "format",
]
license = "MIT"
maintainers = [
    "jshwi <stephen@jshwisolutions.com>",
]
name = "pyaud"
readme = "README.rst"
repository = "https://github.com/jshwi/pyaud"
version = "4.0.2"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
environs = "^9.4.0"
gitspy = "^0"
lsfiles = "^0"
object-colors = "^2.0.1"
pyaud-plugins = ">=0.8"
python = "^3.8"
spall = "^0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
ipython = "^8.4.0"
prompt-toolkit = "^3.0.30"
pylint = "^2.15.9"
pytest = "^7.1.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-xdist = "^2.5.0"
restview = "^3.0.0"
sphinx-toolbox = "^3.1.2"
templatest = "^0.5.0"

[tool.poetry.scripts]
pyaud = "pyaud.__main__:main"

[tool.pyaud.audit]
modules = [
    "files",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "const",
    "params",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    ".mypy_cache",
    ".env",
    "node_modules",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    ".git",
    ".mypy_cache",
    ".idea",
    ".pytest_cache"
]
