[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "KEY=VALUE",
  "PYAUD_CACHE",
  "store",
  "store_true",
  "utf-8"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "pyaud/__main__.py",
  "whitelist.py"
]

[tool.deptry]
ignore_obsolete = [
  "pyaud-plugins"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Framework for writing Python package audits"
documentation = "https://pyaud.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/pyaud/"
keywords = [
  "audit",
  "ci",
  "fix",
  "format",
  "style"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "pyaud"
readme = "README.rst"
repository = "https://github.com/jshwi/pyaud"
version = "7.3.0"

[tool.poetry.dependencies]
arcon = "^0.3.1"
gitpython = "^3.1.30"
lsfiles = ">=0.5"
object-colors = "^2.0.1"
pyaud-plugins = "^0.19.1"
python = "^3.8"
rich = "^13.5.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.12.0"
ipython = "^8.4.0"
pre-commit = "^3.1.1"
pylint = "3.0.2"
pytest = "^7.4.2"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
restview = "^3.0.0"
sphinx-immaterial = "^0.11.9"
sphinx-toolbox = "^3.5.0"
templatest = "^0.10.1"

[tool.poetry.scripts]
pyaud = "pyaud.__main__:main"

[tool.pyaud]
audit = [
  "about-tests",
  "commit-policy",
  "const",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
  (?x)^(
    | docs\/conf\.py
    | whitelist\.py
  )$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
